--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
           <h1>
 <a id="experiments-in-containerizing-all-the-things" class="anchor" href="#experiments-in-containerizing-all-the-things" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Experiments in containerizing all the things</h1>
 
+    <figure>
+      <img src="HHLA_Container_Terminal_Altenwerder.jpg" alt="a container crane with an aft view of an almost fully loaded container ship; six and seven layers of shipping containers visible on the deck." />
+      <figcaption>
+        "<a href="https://commons.wikimedia.org/wiki/File:HHLA_Container_Terminal_Altenwerder_(CTA)_in_Hamburg_-_Winter_2010_-_03.jpg#/media/File:HHLA_Container_Terminal_Altenwerder_(CTA)_in_Hamburg_-_Winter_2010_-_03.jpg">HHLA Container Terminal Altenwerder (CTA) in Hamburg - Winter 2010 - 03</a>" by Frank Grunwald.
 
-![a container crane with an aft view of an almost fully loaded container ship; six and seven layers of shipping containers visible on the deck.](HHLA_Container_Terminal_Altenwerder.jpg)
-
-"[HHLA Container Terminal Altenwerder (CTA) in Hamburg - Winter 2010 - 03](https://commons.wikimedia.org/wiki/File:HHLA_Container_Terminal_Altenwerder_(CTA)_in_Hamburg_-_Winter_2010_-_03.jpg#/media/File:HHLA_Container_Terminal_Altenwerder_(CTA)_in_Hamburg_-_Winter_2010_-_03.jpg)" by Frank Grunwald.
-Licensed under [CC BY-SA 3.0](http://creativecommons.org/licenses/by-sa/3.0) via [Wikimedia Commons](//commons.wikimedia.org/wiki/)
-
+Licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a> via <a href="//commons.wikimedia.org/wiki/">Wikimedia Commons</a>.
+      </figcaption>
+    </figure>
 
         </section>
 
